Fix permissions check for CSS background images, again.  Bug 243948, patch by mvl@exedo.nl, r+sr=bzbarsky